# materooms-backend

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
app/: config.py  dependencies.py  main.py
app/api/v1/: admin.py  auth.py  listings.py  messages.py  router.py  scores.py  users.py  verify.py
app/core/: feature_flags.py  firebase_sms.py  firebase_verify.py  mail.py  otp.py  rate_limit.py  security.py  telegram.py
app/db/: redis.py  session.py
app/models/: __init__.py  feature_flag.py  listing.py  message.py  score.py  user.py  verification.py
app/schemas/: auth.py  common.py  listing.py  message.py  score.py  user.py
scripts/: init_db.py  seed.py
